tests/negative/test-fail-var.std
Fatal error: exception Dune__exe__Sast.SemanticError("variable is immutable")
